# py-multibase

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  codecov.yaml  pyproject.toml  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tox.yml
docs/: .gitignore  Makefile  api_reference.rst  conf.py  index.rst  installation.rst  make.bat  usage.rst
multibase/: __init__.py  converters.py  exceptions.py  multibase.py
newsfragments/: 18.internal.rst  20.feature.rst  23.docs.rst  23.internal.rst  24.internal.rst  26.internal.rst  31.docs.rst  README.md  validate_files.py
scripts/release/: test_package.py
tests/: __init__.py  test_multibase.py
